2007-11-15  Mathias Hasselmann  <mathias@openismus.com>

	Improve documentation and add epc_consumer_is_publisher_resolved.

	* docs/reference/libepc/libepc-1.0-sections.txt:
	Add epc_consumer_is_publisher_resolved.
	* libepc/consumer.c, libepc/consumer.h: Improve documentation.
	Add epc_consumer_is_publisher_resolved.
	* libepc/publisher.c, libepc/publisher.h: Improve documentation.

2007-11-14  Murray Cumming  <murrayc@openismus.com>

	Various documentation improvements.

	* docs/reference/libepc/libepc-1.0-docs.xml: Fix package names.
	* libepc/consumer.c, libepc/dispatcher.c, libepc/publisher.c,
	libepc/service-type.c: Fix grammer and spelling. Clarify sentences.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Update to gtk-doc trunk.

	* gtk-doc.make: Update to trunk version.
	* docs/reference/libepc/.gitignore: Add libepc-1.0-undeclared.txt.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Append "-1.0" suffix to package name.

	* libepc-1.0.pc, libepc-ui-1.0.pc: Renamed.
	* configure.ac, .gitignore: Rename *.pc files.
	* Makefile.am: Append "-1.0" suffix. Sort statements. Add comments.
	* docs/reference/libepc/Makefile.am: Change DOC_MODULE name.
	* docs/reference/libepc/.gitignore: Update file names.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Rename configure.in to configure.ac.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Add application argument to epc_publisher_new for controling DNS-SD
	service type: As the examples demonstrate, automatically using
	g_get_prgname only works in themost simplistic cases.

	* libepc/publisher.c, libepc/publisher.h: Add application argument
	and property of the same name to EpcPublisher.
	* examples/simple-publisher.c, tests/test-publisher-libsoup-494128.c
	tests/test-consumer-by-name.c, tests/test-publisher-change-name.c:
	Pass application name to epc_publisher_new.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Improve examples and give them better names.
